# diffusion

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: attention.h  cross_entropy.h  cuda_utils.h  diffusion.h  elementwise.h  embedding.h  gpt_tiny.h  grad_check.h  init.h  layernorm.h  linear.h  matmul.h  mha.h  mlp.h  mlp_denoiser.h  mnist.h  noise_schedule.h  optim.h  parameter.h  scheduler.h  shakespeare.h  softmax.h  tensor.h  tensor_io.h  timestep_embed.h  transformer_block.h  transpose.h
kernels/: attention.cu  cross_entropy.cu  diffusion.cu  elementwise.cu  embedding.cu  layernorm.cu  linear.cu  matmul.cu  matmul_cpu.cpp  matmul_cublas.cu  mha.cu  mlp.cu  optim.cu  softmax.cu  timestep_embed.cu  transformer_block.cu  transpose.cu
python_ref/: download_mnist.py  download_shakespeare.py  gen_adam_ref.py  gen_attention_ref.py  gen_bias_add_ref.py  gen_ce_ref.py  gen_diffusion_ref.py  gen_embedding_ref.py  gen_gelu_ref.py  gen_layernorm_ref.py  gen_linear_ref.py  gen_matmul_ref.py  gen_matmul_tn_ref.py  gen_mha_ref.py  gen_mlp_ref.py  gen_relu_ref.py  gen_softmax_ref.py  gen_timestep_embed_ref.py  gen_transformer_block_ref.py  gpt_tiny_ref.py  tensor_io.py  train_mnist_baseline.py  validate_gpt_tiny.py
src/: device_info.cu  gpt_tiny.cu  hello.cu  mlp_denoiser.cu  sample_ddim_mlp.cu  sample_gpt_tiny.cu  test_cuda_check.cu  test_tensor.cu  train_diffusion_mlp.cu  train_gpt_tiny.cu  train_mnist.cu
tests/: bench_elementwise.cu  bench_matmul.cu  test_adam_vs_ref.cu  test_attention_backward.cu  test_attention_vs_ref.cu  test_ce_backward.cu  test_ce_vs_ref.cu  test_diffusion_vs_ref.cu  test_elementwise_vs_ref.cu  test_embedding_vs_ref.cu  test_gelu_vs_ref.cu  test_gpt_tiny_smoke.cu  test_gpt_tiny_vs_ref.cu  test_layernorm_backward.cu  test_layernorm_vs_ref.cu  test_linear_backward.cu  test_linear_vs_ref.cu  test_matmul.cu  test_matmul_tn_vs_ref.cu  test_matmul_vs_ref.cu  test_mha_vs_ref.cu  test_mlp_denoiser_smoke.cu  test_mlp_vs_ref.cu  test_mnist_loader.cu  test_optim_step.cu  test_relu_backward.cu  test_scheduler_sanity.cu  test_softmax_vs_ref.cu  test_timestep_embed_vs_ref.cu  test_transformer_block_vs_ref.cu
